--- a/templates/special.html
+++ b/templates/special.html
@@ -1,11 +1,17 @@
 <template id="my-special-div">
   <style>
-    DIV{
+    #main{
       border:1px dotted;
       margin:48px;
       background-color: whitesmoke;
       font-family: monospace , georgia , arial , sans-serif;
       padding: 48px;
+    }
+    p{
+      color: red;
+    }
+    ::content p{
+      color:violet;
     }
   </style>
   <script>
@@ -13,5 +19,7 @@
   <div id="main">
     <h1>I am a template used to construct a custom element.</h1>
     <h2>I come with scoped styles and scripts</h2>
+    <content></content>
+    <p>I am styled in scope. my style doesn't bleed out</p>
   </div>
 </template>
